--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
   },
   "devDependencies": {
     "@types/node": "18.19.3",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
     "typescript": "4.9.5"
   }
 }
