Add pages/_app.mdx to tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,8 @@
     "**/*.ts",
     "**/*.tsx",
     "app/**/*.ts",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "pages/_app.mdx",
   ],
   "exclude": [
     "node_modules"
